<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fotoProfil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BD1717"
    android:orientation="vertical"
    tools:context=".AboutActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/foto_guwe"
        android:layout_width="422dp"
        android:layout_height="250dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/foto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/foto_formal" />

    <TextView
        android:id="@+id/nama_siswa"
        style="@style/NameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/foto_guwe"
        android:layout_marginTop="10dp"
        android:text="@string/nama_guwe"
        android:textAlignment="center"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/email_guwe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nama_siswa"
        android:text="@string/email_guuwe"

        android:textAlignment="center"
        android:textSize="21sp" />


</RelativeLayout>

