<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:id="@+id/img_item_photo"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/img_item_photo"
                    android:orientation="vertical"
                    android:layout_marginTop="45dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp">
                    <TextView
                        style="@style/NameText"
                        android:id="@+id/tv_item_name"
                        android:text="@string/name"

                        android:layout_marginBottom="8dp"/>
                    <TextView
                        style="@style/RegulerText1"
                        android:id="@+id/tv_item_developer_detail"
                        android:text="@string/inventor"/>


                </LinearLayout>


            </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView

            android:text="@string/description"
            style="@style/RegulerText1"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:lineSpacingMultiplier="1"
            android:textColor="@color/black"
            android:textSize="25sp"/>

        <TextView

            android:text="@string/description"
            android:id="@+id/tv_description"
            style="@style/ContentText"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="1dp"
            android:lineSpacingMultiplier="1"
            android:textColor="@color/black"
            android:textSize="16sp"/>

    </LinearLayout>



</FrameLayout>